trunk/Archive2/bf/49a5abb033f48e/output
main.cpp: In function 'int main()':
main.cpp:27:30: error: no matching function for call to 'f(int, Data&, Compare&)'
     std::cout << f(5, d, comp) << '\n';
                              ^
main.cpp:27:30: note: candidate is:
main.cpp:17:6: note: template<class A, class U> bool f(A, A, U)
 bool f(A a, A b, U u = U())
      ^
main.cpp:17:6: note:   template argument deduction/substitution failed:
main.cpp:27:30: note:   deduced conflicting types for parameter 'A' ('int' and 'Data')
     std::cout << f(5, d, comp) << '\n';
                              ^
